	size of the captions to be controlled.

    o	A series of changes make the CHARSXP cache introduced in 2.6.0
	faster (and in some cases many times faster) in sessions with
	a large number (e.g. a million) of unique character strings,
	and also if there are many empty strings.

    o	embedFonts(), bitmap() and dev2bitmap() explicitly turn off
	auto-rotation in Ghostscript when generating PDF.


BUG FIXES

    o	iconv() is again able to translate character strings with
	embedded nuls (such as those in UCS-2).

    o	new.packages() and update.packages() failed when called on an
	empty library, since old.packages() threw an error.
	old.packages() now returns NULL (as documented) in that case.

    o	Builds on Mac OS X 10.4 or higher now allocate enough space
	in the binary headers to relocate dependent libraries into the
	framework.

    o	R CMD build now computes the exclusion list on the copy it
	makes: this avoids problems if the original sources contain
	symbolic links (which are resolved in the copy).  Thanks to
	Michael Lawrence for diagnosis and patch.

    o	object.size() had slightly too low a size for objects of type "S4".

    o	symbol() in plotmath expressions was only accepting valid
	character strings, which made it impossible to specify symbols
	such as aleph (obtained by symbol("\300")) in a UTF-8 locale.

    o   An event handling issue caused autorepeat functions to
        misbehave with tcltk (notably scrollbars). 

    o	plot(sin, -5, 5) gives ylab 'sin(x)' again, where it resulted
	in 'x(x)' in 2.6.0.  Further,  plot(sin)  again plots from
	[0,1] also in cases where a previously used coordinate system
	differs.

    o	curve() with unspecified 'from', 'to' and 'xlim' now reuses the
	previous x limits, and not slightly larger ones.

    o	It was intended that R code filenames in packages should start
	with an ASCII letter or digits (and R CMD INSTALL uses that),
	but the test used in R CMD build ([A-Za-z0-9]) was