@@ -672,14 +672,15 @@ CPUs (@cputype{ppc}, @cputype{ppc64}, @cputype{i386} and
 adding @samp{r_arch=@var{name}} to the @command{configure} line.  Here
 @var{name} can be anything non-empty, and is used to name subdirectories
 of @file{lib}, @file{etc}, @file{include} and @file{libs}.  Example
-names from other systems are the use of @file{sparcv9} on Solaris and
-@file{32} by @code{gcc} on @cputype{x86_64} Linux.
+names from other systems are the use of @file{sparcv9} on Soarc Solaris
+and @file{32} by @code{gcc} on @cputype{x86_64} Linux.
 
 If you have two or more such builds you can install them over each other
-(and one build can be done without @samp{r_arch}).  The space savings
-can be considerable: on @cputype{x86_64} Linux a basic install (without
-debugging symbols) took 63Mb, and adding a 32-bit build added 6Mb.  If
-you have installed multiple builds you can select which build to run by
+(and for 32/64-bit builds on one architecture, one build can be done
+without @samp{r_arch}).  The space savings can be considerable: on
+@cputype{x86_64} Linux a basic install (without debugging symbols) took
+63Mb, and adding a 32-bit build added 6Mb.  If you have installed
+multiple builds you can select which build to run by
 
 @example
 R --arch=@var{name}
@@ -695,7 +696,7 @@ script or a @file{src/Makefile} file.  In such cases you can install for
 extra builds by
 
 @example
-R --arch=@var{name} CMD INSTALL --libs-only @samp{pkg(s)}
+R --arch=@var{name} CMD INSTALL --libs-only @var{pkg(s)}
 @end example
 
 
